# up-transport-iceoryx2-rust

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.git-backup/: FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git-backup/logs/: HEAD
.git-backup/logs/refs/: stash
.git-backup/logs/refs/heads/: main  register-listener
.git-backup/logs/refs/remotes/origin/: HEAD  main  register-listener
.git-backup/logs/refs/remotes/upstream/: HEAD  main
.git-backup/objects/pack/: pack-dca51feddbf54a6a950c83fbddf50885c4d1fd99.idx  pack-dca51feddbf54a6a950c83fbddf50885c4d1fd99.pack  pack-dca51feddbf54a6a950c83fbddf50885c4d1fd99.rev
.git-backup/refs/: stash
.git-backup/refs/heads/: main
.git-backup/refs/remotes/origin/: register-listener
examples/: publisher_example.rs  subscriber.rs
src/: builder.rs  config.rs  iceoryx2_transport.rs  lib.rs  listener_registry.rs  message_type.rs  pubsub.rs  service_name_mapping.rs  transport.rs  umessage.rs  utransport.rs
src/common/: verify_filter_criteria.rs
src/transport/: iceoryx2_transport.rs  mod.rs  utransport.rs
