# ################################################################################
# Copyright (c) 2025 Contributors to the Eclipse Foundation
# 
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
# 
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https: //www.apache.org/licenses/LICENSE-2.0
# 
# SPDX-License-Identifier: Apache-2.0
# ################################################################################

[package]
name = "up-transport-iceoryx2-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
up-rust = "0.5"
iceoryx2 = "0.6.1"
async-trait = "0.1"
log = "0.4.27"
backon = "1.5.2"
clap = "4.5.45"
tokio = "1.47.1"

[dev-dependencies]
env_logger = "0.11.8"
